plang/testing/logs/false-incorrect/37/program37.p.p
oKJw (KwuNg) lz.


gz (gfz (duSU (gbypz F2uKX)) YTV) qTk.

oY8eP G7.

r a qZ FiJPQ (uV vEo (P7)) :- x E (JVgTC) M3gq (aCO (kSH7u hFQG) v4XZi (M5) v).

hnOfz (Mm) (PDII) :- vV QndDo na59H (x (n2 (baweC YDclN w (Mu7cD)) AzLQ) G (AkSr)) dsz.
rWWG (T7G) t (R) aR :- ((iY (x2 nzjw B7I (B) pMRjy) (w6 G (ue5oo ASosb (UILC)) zzrQx) MUnf MjgP6, egN0)), pjY (UDcg), hv (Ov) h; (u (e we (ZAY) (l (do5A VhG) M rx (F))) Uy).

xx.

yH (M) :- ((mMF)).
? ((qHkWH VnLQ3 (Y), vz), (xzCru (Jzu) (YFku9) WG, ub (kynz (snGZJ) qb9p)); (j n9 (x7bjA u (uGVd (BdxTB)) (zae9 (o) (b WMd (q8g4 (sgc (INT) (L) (V) c9) (ioBY (EM05) (P) Q IJp) pAdL cpbjO) xF UlSV) zq dl9) (O)) (WbiC); h J (KW) ukF VpMVk), s2 hOC BR3d UWOQ fNtv; h8 kb4 (K5M) AIB; iOUV8 md (VK) X (wC (E) QNwn8 aMs)).
